[gd_scene load_steps=9 format=3 uid="uid://docc6xin1bqou"]

[ext_resource type="Script" path="res://scripts/BattleSystem/battle_manager.gd" id="1_nusr3"]
[ext_resource type="Texture2D" uid="uid://db0nefci05mgl" path="res://art/image (1).png" id="1_qagmp"]
[ext_resource type="PackedScene" uid="uid://c8ts3jtnd8gu4" path="res://scenes/unit.tscn" id="3_2khoy"]
[ext_resource type="FontFile" uid="uid://c56rtacbksa5q" path="res://art/04B_11__.TTF" id="4_epudw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bi14n"]
bg_color = Color(0.133333, 0.129412, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_awppv"]
bg_color = Color(0.270588, 0.266667, 0.313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08s7k"]
bg_color = Color(0.270588, 0.266667, 0.313726, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5qmqv"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.494118, 0.501961, 0.392157, 1)
corner_detail = 1

[node name="BattleScene" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_nusr3")

[node name="Environment" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(1, -16)

[node name="Background" type="Sprite2D" parent="Environment"]
unique_name_in_owner = true
position = Vector2(121, 84)
texture = ExtResource("1_qagmp")
hframes = 3
vframes = 3

[node name="AllyContainer" type="Node2D" parent="Environment"]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(50, 110)

[node name="Unit" parent="Environment/AllyContainer" instance=ExtResource("3_2khoy")]
position = Vector2(-15, 3)

[node name="Unit2" parent="Environment/AllyContainer" instance=ExtResource("3_2khoy")]

[node name="EnemyContainer" type="Node2D" parent="Environment"]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(210, 110)

[node name="Unit" parent="Environment/EnemyContainer" instance=ExtResource("3_2khoy")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bi14n")

[node name="MarginContainer" type="MarginContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="TextContainer" type="Control" parent="UI/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Text" type="RichTextLabel" parent="UI/Panel/MarginContainer/TextContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_separation = 1
theme_override_fonts/normal_font = ExtResource("4_epudw")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "You tried to run!"
scroll_active = false
scroll_following = true

[node name="Next" type="RichTextLabel" parent="UI/Panel/MarginContainer/TextContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 4.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("4_epudw")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[pulse freq=1.0 color=#ffffff00 ease=-2.0]>"
fit_content = true
scroll_active = false

[node name="Actions" type="HBoxContainer" parent="UI/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Attack" type="Button" parent="UI/Panel/MarginContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.133333, 0.129412, 0.180392, 1)
theme_override_fonts/font = ExtResource("4_epudw")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_awppv")
theme_override_styles/hover = SubResource("StyleBoxFlat_08s7k")
theme_override_styles/normal = SubResource("StyleBoxFlat_5qmqv")
text = "Attack"

[node name="Skill" type="Button" parent="UI/Panel/MarginContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.133333, 0.129412, 0.180392, 1)
theme_override_fonts/font = ExtResource("4_epudw")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_awppv")
theme_override_styles/hover = SubResource("StyleBoxFlat_08s7k")
theme_override_styles/normal = SubResource("StyleBoxFlat_5qmqv")
text = "Skill"

[node name="Item" type="Button" parent="UI/Panel/MarginContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.133333, 0.129412, 0.180392, 1)
theme_override_fonts/font = ExtResource("4_epudw")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_awppv")
theme_override_styles/hover = SubResource("StyleBoxFlat_08s7k")
theme_override_styles/normal = SubResource("StyleBoxFlat_5qmqv")
text = "Item"

[node name="Run" type="Button" parent="UI/Panel/MarginContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.133333, 0.129412, 0.180392, 1)
theme_override_fonts/font = ExtResource("4_epudw")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_awppv")
theme_override_styles/hover = SubResource("StyleBoxFlat_08s7k")
theme_override_styles/normal = SubResource("StyleBoxFlat_5qmqv")
text = "Run"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.12549, 0.12549, 0.12549, 1)

[connection signal="pressed" from="UI/Panel/MarginContainer/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="UI/Panel/MarginContainer/Actions/Skill" to="." method="_on_skill_pressed"]
[connection signal="pressed" from="UI/Panel/MarginContainer/Actions/Item" to="." method="_on_item_pressed"]
[connection signal="pressed" from="UI/Panel/MarginContainer/Actions/Run" to="." method="_on_run_pressed"]
